Test failures on non-DTrace builds due to incomplete DTrace* flags handling

XMLWordPrintable

    • b11

        This reproduces in GHA in x86_32 mode after JDK-8278423, which exposes a problem in DTrace* flags handling.

        Reproduces locally too:

        $ CONF=linux-x86-server-fastdebug make run-test TEST=serviceability/7170638/SDTProbesGNULinuxTest.java

        java.lang.Error: java.lang.RuntimeException: '.note.stapsd' missing from stdout

        at SDTProbesGNULinuxTest.testLibJvm(SDTProbesGNULinuxTest.java:76)
        at java.base/java.util.stream.ForEachOps$ForEachOp$OfRef.accept(ForEachOps.java:183)
        at java.base/java.util.stream.ReferencePipeline$3$1.accept(ReferencePipeline.java:197)
        at java.base/java.util.stream.ReferencePipeline$2$1.accept(ReferencePipeline.java:179)

              Assignee:
              Aleksey Shipilev
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: