8281822: Test failures on non-DTrace builds due to incomplete DTrace* flags handling

Backport-of: a81c911176660162ca0be3092ea941f24d88d5be