test/lib/jdk/test/whitebox/WhiteBox.java
@@ -594,6 +594,7 @@ public class WhiteBox {
   public native boolean areSharedStringsIgnored();
   public native boolean isCDSIncluded();
   public native boolean isJFRIncluded();
+  public native boolean isDTraceIncluded();
   public native boolean isJavaHeapArchiveSupported();
   public native Object  getResolvedReferences(Class<?> c);
   public native void    linkClass(Class<?> c);
