test/lib/sun/hotspot/WhiteBox.java
@@ -595,6 +595,7 @@ public class WhiteBox {
   public native boolean areSharedStringsIgnored();
   public native boolean isCDSIncluded();
   public native boolean isJFRIncluded();
+  public native boolean isDTraceIncluded();
   public native boolean isJavaHeapArchiveSupported();
   public native Object  getResolvedReferences(Class<?> c);
   public native void    linkClass(Class<?> c);
